[package]
name = "stm_ethernet"
description = "Little projects using the STM32F429 Ethernet"
license = "Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
version = "0.1.0"
repository = "https://github.com/birkenfeld/stm_ethernet"
edition = "2018"

[dependencies]
log = "0.4"
arrayvec = { version = "0.7", default-features = false }
byteorder = { version = "1.2", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-itm = "0.4"
stm32f4xx-hal = { version = "0.14", features = ["rt", "stm32f429"] }

[dependencies.stm32-eth]
git = "https://github.com/stm32-rs/stm32-eth"
# version = "0.4.1"
features = ["smoltcp-phy", "stm32f429"]

[dependencies.smoltcp]
version = "0.9.1"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4"]

[profile.release]
debug = 1
lto = true
