[package]
name = "stm_ethernet"
description = "Little projects using the STM32F429 Ethernet"
license = "Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
version = "0.1.0"
repository = "https://github.com/birkenfeld/stm_ethernet"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
byteorder = { version = "1.2", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
stm32f4xx-hal = "0.20"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.stm32-eth]
# git = "https://github.com/stm32-rs/stm32-eth"
version = "0.6"
features = ["smoltcp-phy", "stm32f429"]

[dependencies.smoltcp]
version = "0.11.0"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4", "defmt"]

[profile.release]
debug = 1
lto = true
