[package]
name = "stm_ethernet"
version = "0.1.0"
edition = "2021"
description = "Little projects using the STM32F429 Ethernet"
license = "Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
repository = "https://github.com/birkenfeld/stm_ethernet"

[dependencies]
# basic cortex-m support
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
stm32f4xx-hal = "0.20"
# rtic
cortex-m-rtic = "1.0"
systick-monotonic = "1"
# debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# utilities
arrayvec = { version = "0.7", default-features = false }
byteorder = { version = "1.2", default-features = false }

[dependencies.stm32-eth]
# git = "https://github.com/stm32-rs/stm32-eth"
version = "0.6"
features = ["smoltcp-phy", "stm32f429"]

[dependencies.smoltcp]
version = "0.11.0"
default-features = false
features = ["defmt", "medium-ethernet", "proto-ipv4", "proto-dhcpv4",
            "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
